Fix style on mobile

--- a/links/main.css
+++ b/links/main.css
@@ -88,6 +88,7 @@ ul.nobull li {list-style-type: none}
   body {background: #000; color: #dddddd}
   body header a img { filter: invert(1)}
   body a { color: white;}
+  body p { color: white;}
   main > pre { background: white; color:#000}
   main > code { background:white; color:#000}
   body select { color: black; background-color: dddddd;}
